...

@Composable
fun EmptyBox(text: String) {
    Box(
        modifier = Modifier
            .fillMaxSize()
            .testTag("emptyBox")
    ) {
        Column(
            modifier = Modifier
                .align(Alignment.Center)
                .width(256.dp)
        ) {
...

        Button(
            modifier = Modifier
                .padding(start = 16.dp, end = 16.dp, top = 8.dp, bottom = 8.dp)
                .align(Alignment.Center)
                .fillMaxSize()
                .testTag("bottomBarButton"),
            onClick = onClick
        ) {
            Text(
                text = text,
                style = MaterialTheme.typography.bodyMedium
            )
...
                    MaterialTheme.colorScheme.onPrimary
                },
                shape = MaterialTheme.shapes.small
            )
            .fillMaxWidth()
            .height(100.dp)
            .testTag("items")
            .combinedClickable(
                enabled = clickable,
                onLongClick = { onLongClick() },
                onClick = { onClick() })
    ) {

...
            hint = "رمز عبور خود را وارد کنید",
            onValueChange = {},
            value = "",
            visualTransformation = PasswordVisualTransformation()
        )

        BigButton(text = "ورود") {

        }
        Row(
            modifier = Modifier
                .align(Alignment.Start)
        ) {
...
        Row(
            modifier = Modifier
                .clickable {
                    filteredValues = values
                    expanded = true
                }
                .testTag("FilterDropDownList")
                .fillMaxHeight(),
        ) {

            icon()
            text()
            Icon(
...
    title: String,
) {
    AppBarWithNavigationButton(
        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
        title = title,
        onNavigationButtonPressed = { onBackPressed() },
        testTag = "back"
    )
}

@Composable
fun AppBarWithNavigationButton(
    imageVector: ImageVector,
...
