...

                    OutlinedButton(
                        onClick = {
                            btnNotConfirmOnClick()
                        }, modifier = Modifier
                            .padding(top = 12.dp, end = 16.dp)
                            .testTag("notConfirm")
                    )
                    {
                        Text(
                            text = btnNotConfirm,
                            style = MaterialTheme.typography.bodySmall,
                        )
...
