...
    @Inject
    lateinit var api: API

    @Inject
    lateinit var localStoreDatabase: LocalStoreDatabase

    private var selectedStockDraftRequestType by mutableStateOf("انتخاب نوع درخواست")
    private var allowedType = mutableListOf(3, 4, 8, 9, 10)
    var stockDraftId by mutableStateOf("")

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)

...
